fix: padding on header section on small screens

--- a/src/app/shared/components/main-sections/header/header.scss
+++ b/src/app/shared/components/main-sections/header/header.scss
@@ -341,4 +341,9 @@
   .profileImgMobile {
     width: 70%;
   }
+
+  .headerContent {
+    gap: 32px;
+    padding: 32px 0 96px 0;
+  }
 }
